src/test/ui/issues/issue-9814.stderr
error[E0614]: type `Foo` cannot be dereferenced
  --> $DIR/issue-9814.rs:7:13
   |
LL |     let _ = *Foo::Bar(2);
   |             ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0614`.
